--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,10 +1,14 @@
-@media screen and (min-width: 768px)
+@media screen and (min-width: 600px)
 {
 	body{
 		margin: 0 auto;
 	}
 	#contenido{
 		width: 85%;
+	}
+	#contenido .noticia .not-centro{
+		width: 51%;
+		margin: 0px 2em 0px 0px;
 	}
 	#asideiz{
 		width: 15%;
