--- a/css/style.css
+++ b/css/style.css
@@ -61,20 +61,19 @@ nav ul {
 nav ul li{
 	display: inline-block;
 	margin: 0;
-	padding:0px;
+	padding:0;
 	position:relative;
-	width: 24.3%;
+	width: 24%;
 	
 }
 nav ul li a{
 	color : #c7c7c7;
-	border-left:2px solid black;
+	border-left:1px solid black;
 	display: block;
 	font-size: 2.5em;
 	height:60px;
 	line-height: 60px;
 	text-align: center;
-	
 	width: 102%;
 	font-family: 'icomoon';
 
@@ -134,39 +133,39 @@ footer #redessociales ,footer #formulario
     
 	background: white;
 	position: relative;
-	height: 154px;
+	height: 130px;
 	margin-bottom: 3px;
 
 }
-#contenido .noticia .not-imagen, #contenido .noticia .not-hora, #contenido .noticia .not-centro
-{
-	display: inline-block;
-}
+
 #contenido .noticia .not-imagen {
 	float: left;
 	margin: 0px 1em 0px 0px;
 	padding: 0px;
-	height: 154px;
+	width: 20%;
+	height: 130px;
+	max-width: 154px;
 }
 #contenido .noticia .not-imagen img
 {
-	width: 150px;
-	height: 154px;
+	width: 100%;
+	height: 100%;
 
 }
 #contenido .noticia .not-centro
 {
 
-	height: 154px;
-	width: 55%;
-	overflow: hidden;
-	padding-right: 3px;
+	height: 130px;
+	width: 63%;
+	overflow: auto;
+	
 }	
 #contenido .noticia .not-hora{
 	background: #2b2b2b;
 	float:right;
-	height: 154px;
-	width: 40px;
+	height: 130px;
+	width: 10%;
+	max-width: 46px;
 	position: absolute;
 	top:0;
 	right:0;
@@ -191,9 +190,10 @@ footer #redessociales ,footer #formulario
 #contenido .noticia .not-hora .hora ,#contenido .noticia .not-hora .icon-hora
 {
 	display: block;
-	height: 75px;
+	height: 65px;
 	text-align: center;
-	line-height: 75px;
+	line-height: 65px;
+	font-size: 13px;
 }
 
 
