--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ header{
 	color:white;
 	margin: 0px;
 	padding: 0.5em;
+
 }
 header img{
 	float:left;
@@ -50,6 +51,19 @@ header #lupa
 	right: 0px;
 	top:0px;
 	width: 50px;
+}
+
+header #slider
+{
+	height: 175px;
+	width: 100%;
+	background: white;
+	padding: 0;
+	margin: 0;
+}
+header #slider img{
+	width: 100%;
+	height: 100%;
 }
 
 nav ul {
