--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ a
 }
 body
 {
-	background: #141414; 
+	background: #F7F7F7; 
 	color:#2d2d2d;
 	font-family: Arial;
 	font-size:16px;
@@ -65,14 +65,27 @@ header #slider img{
 	width: 100%;
 	height: 100%;
 }
-
-nav ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	
+#buscar{
+	height: 50px;
+	background: #102696;
 }
-nav ul li{
+#nav ul {
+	list-style: none;
+	margin-bottom: 1em ;
+	padding: 1em;
+	background: #102696; /* Old browsers */
+background: -moz-linear-gradient(top, #102696 0%, #036cbc 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#102696), color-stop(100%,#036cbc)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top, #102696 0%,#036cbc 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top, #102696 0%,#036cbc 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top, #102696 0%,#036cbc 100%); /* IE10+ */
+background: linear-gradient(to bottom, #102696 0%,#036cbc 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#102696', endColorstr='#036cbc',GradientType=0 ); /* IE6-9 */
+-webkit-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
+-moz-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
+box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
+}
+#nav ul li{
 	display: inline-block;
 	margin: 0;
 	padding:0;
@@ -80,7 +93,7 @@ nav ul li{
 	width: 24%;
 	
 }
-nav ul li a{
+#nav ul li a{
 	color : #c7c7c7;
 	border-left:1px solid black;
 	display: block;
@@ -92,11 +105,11 @@ nav ul li a{
 	font-family: 'icomoon';
 
 }
-nav ul li  :hover{
+#nav ul li  :hover{
 	background: #04169c;
 }
 
-nav #pol a:after
+#nav #pol a:after
 {
 	
 	content: "\e605";
@@ -104,20 +117,20 @@ nav #pol a:after
 	
 
 }
-nav #del a:after{
+#nav #del a:after{
 
 	content: "\e60d";
 	
 }
 
-nav #tran a:after
+#nav #tran a:after
 {
 	
 	content: "\e600";
 	
 
 }
-nav #vid a:after
+#nav #vid a:after
 {
 	
 	content: "\e606";
@@ -142,6 +155,7 @@ footer #redessociales ,footer #formulario
 	color:white;
 	background: #5d5d5d;
 	padding-right: 12px;
+	margin-bottom: 1em;
 }
 #contenido .noticia{
     
