--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,16 +13,101 @@
 	}
 	#asideiz{
 		width: 20%;
-		height: 800px;
-		background: white;
+		
+		display: block;
 		float:left;
 	}
+		/*aside derecho*/
 	#asideder{
 		width: 20%;
-		height: 800px;
-		background: blue;
+		
+		display: block;
 		float: right;
+		
+
 	}
+
+	#asideder .aside-item
+	{
+		margin:0 auto;
+		width: 90%;
+		
+		border: 1px solid #ADADAD;
+		border-radius: 10px;
+		margin-bottom: 10px;
+
+	}
+	#asideder .aside-item  p
+	{
+		padding: 10px;
+		color:#2D2D2D;
+		text-align: center;
+		
+	}
+	#asideder .aside-item  h2
+	{
+		color:#036cbc;
+		font-size: 1em;
+		display: block;
+		
+		width: 100%;
+		border-radius: 10px 10px 0px 0px;
+		background: #ADADAD;
+		margin: 0px;
+		text-align: center;
+		line-height: 50px;
+		background: #ffffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffffff 0%, #ffffff 39%, #cecece 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(39%,#ffffff), color-stop(100%,#cecece)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cecece',GradientType=0 ); /* IE6-9 */
+
+	}
+/*aside izquierdo*/
+	#asideiz .aside-item
+	{
+		margin:0 auto;
+		width: 90%;
+		
+		border: 1px solid #ADADAD;
+		border-radius: 10px;
+		margin-bottom: 10px;
+
+	}
+	#asideiz .aside-item  p
+	{
+		padding: 10px;
+		color:#2D2D2D;
+		text-align: center
+	}
+	#asideiz .aside-item  h2
+	{
+		color:#036cbc;
+		font-size: 1em;
+		display: block;
+		
+		width: 100%;
+		border-radius: 10px 10px 0px 0px;
+		background: #ADADAD;
+		margin: 0px;
+		text-align: center;
+		line-height: 50px;
+		background: #ffffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffffff 0%, #ffffff 39%, #cecece 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(39%,#ffffff), color-stop(100%,#cecece)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #ffffff 0%,#ffffff 39%,#cecece 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cecece',GradientType=0 ); /* IE6-9 */
+
+	}
+	
+
+
 header #slider
 {
 	height: 300px;
