--- a/css/style.css
+++ b/css/style.css
@@ -27,31 +27,26 @@ header{
 	border-bottom:3px solid black;
 	color:white;
 	margin: 0px;
-	padding: 0.5em;
-
+	
 }
 header img{
 	float:left;
+	width: 20px;
+	height: 30px;
 }
 header h1{
 	display: block;
 	font-size: 21px;
 	font-weight: normal;
-	margin:1em 35px 0em 0em;
+	margin:0em 35px 0em 0em;
+	padding-top: 0.5em;
 	text-align: center;
 
 }
 header #menu{
 	width: 50px;
 }
-header #lupa
-{
-	float: right;
-	position:absolute;
-	right: 0px;
-	top:0px;
-	width: 50px;
-}
+
 
 header #slider
 {
@@ -68,29 +63,31 @@ header #slider img{
 #buscar{
 	height: 50px;
 	background: #102696;
+	position: relative;
 }
 #nav ul {
 	list-style: none;
 	margin-bottom: 1em ;
-	padding: 1em;
+	padding: 0px;
+	
 	background: #102696; /* Old browsers */
-background: -moz-linear-gradient(top, #102696 0%, #036cbc 100%); /* FF3.6+ */
-background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#102696), color-stop(100%,#036cbc)); /* Chrome,Safari4+ */
-background: -webkit-linear-gradient(top, #102696 0%,#036cbc 100%); /* Chrome10+,Safari5.1+ */
-background: -o-linear-gradient(top, #102696 0%,#036cbc 100%); /* Opera 11.10+ */
-background: -ms-linear-gradient(top, #102696 0%,#036cbc 100%); /* IE10+ */
-background: linear-gradient(to bottom, #102696 0%,#036cbc 100%); /* W3C */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#102696', endColorstr='#036cbc',GradientType=0 ); /* IE6-9 */
--webkit-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
--moz-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
+	background: -moz-linear-gradient(top, #102696 0%, #036cbc 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#102696), color-stop(100%,#036cbc)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #102696 0%,#036cbc 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #102696 0%,#036cbc 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #102696 0%,#036cbc 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #102696 0%,#036cbc 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#102696', endColorstr='#036cbc',GradientType=0 ); /* IE6-9 */
+	-webkit-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
+	-moz-box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
+	box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
 }
 #nav ul li{
 	display: inline-block;
 	margin: 0;
 	padding:0;
 	position:relative;
-	width: 24%;
+	width: 23.95%;
 	
 }
 #nav ul li a{
@@ -101,7 +98,7 @@ box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
 	height:60px;
 	line-height: 60px;
 	text-align: center;
-	width: 102%;
+	width: 105%;
 	font-family: 'icomoon';
 
 }
@@ -137,9 +134,19 @@ box-shadow: 0px -2px 5px 0px rgba(43,43,43,0.71);
 	
 
 }
+#asideiz{
+	display: none;
+	}
+		/*aside derecho*/
+#asideder{
+	display: none;
+	
+}
 footer
 {
+	margin-top: 20px;
 	clear: both;
+	background: #5d5d5d;
 }
 footer #redessociales ,footer #formulario
 {
@@ -149,13 +156,36 @@ footer #redessociales ,footer #formulario
 
 #nota
 {
-	text-align: right;
+	position: relative;
+	text-align: center;
 	font-size: 13px;
-	height: 20px;
+	height: 30px;
 	color:white;
 	background: #5d5d5d;
 	padding-right: 12px;
 	margin-bottom: 1em;
+}
+#nota form
+{
+	position:absolute;
+	right: 0;
+	top: 0;
+	width: 180px;
+	margin: 5px 0px 20px 0px;
+}
+#nota form #txtbuscar ,#nota form #lupa
+{
+	display: inline-block;
+	padding:0px;
+	margin:0px;
+	
+}
+#nota form #lupa
+{
+	float: right;
+	width: 22px;
+	
+
 }
 #contenido .noticia{
     
