--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,7 +8,7 @@
 		margin: 0 auto;
 	}
 	#contenido .noticia .not-centro{
-		width: 61%;
+		width: 75%;
 		margin: 0px 2em 0px 0px;
 	}
 	#asideiz{
@@ -117,4 +117,6 @@ header #slider
 	margin: 0;
 }
 
+#nota{
+	text-align: center;
 }
